@@ -1134,29 +1134,39 @@ rxvt_dispatch_action( rxvt_t *r, action_t *action, XEvent *ev)
 	case MacroFnPrintScreen:
 	{
 	    /*
-	     * If first argument is "-scrollback", then dump the whole
+	     * Arguments: [-{s,n,p}] command
+	     *	s: Dump whole scroll back buffer.
+	     *	p: Pretty print (i.e. with escape sequences for ANSII color)
+	     *	n: No line continuation
 	     * scroll back buffer. The argument if any is the command to use for
 	     * the printer pipe.
 	     */
 
 	    char    *s		= (char*) astr;
 	    int	    pretty	= 0,
-		    scrollback	= 0;
+		    scrollback	= 0,
+		    linecont	= 1;
+
 
 	    if( *s && *s == '-' )
 	    {
 		while( *(++s) && !isspace( *s ) )
 		{
-		    if( *s == 's' )
-			scrollback = 1;
-		    else if( *s == 'p' )
-			pretty = 1;
+		    switch( *s )
+		    {
+			case 's': scrollback	= 1; break;
+			case 'p': pretty	= 1; break;
+			case 'n': linecont	= 0; break;
+			default:
+			    rxvt_print_error( "Bad option %c to macro %s",
+				    *s, macroNames[action->type] );
+		    }
 		}
 
 		while( isspace(*s) ) s++;
 	    }
 
-	    rxvt_scr_printscreen( r, ATAB(r), scrollback, pretty,
+	    rxvt_scr_printscreen( r, ATAB(r), scrollback, pretty, linecont,
 		    *s ? s : NULL );
 
 	    break;
